--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/contac.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/animation.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -37,11 +38,6 @@
                 <li class="menu__link"><a href="#contac">Contacto</a></li>
             </ul>
         </nav>
-        <div class="switches">
-            <div class="toggle__theme" id="toggle-theme">
-                <p class="toggle__text" id="toggle-text">Light Mode</p>
-            </div>
-        </div>
     </header>
 
     <!--main-->
@@ -68,6 +64,9 @@
                     ut porro ad iusto minus!</p>
                 <div class="about__social">
                     <a href="" class="about__icon"><i class='bx bxl-github'></i></a>
+                    <a href="" class="about__icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="" class="about__icon"><i class='bx bxl-instagram'></i></a>
+                    <a href="" class="about__icon"><i class='bx bxl-facebook-square'></i></a>
                 </div>
             </div>
             <div class="about__media">
@@ -167,7 +166,8 @@
 
         <div class="footer__container footer__container--social">
             <ul class="footer__social--list">
-                <li class="footer__social github"><a href=""><iconify-icon icon="mdi:github"  style="color: white"></iconify-icon></a></li>
+                <li class="footer__social github"><a href=""><iconify-icon icon="mdi:github"
+                            style="color: white"></iconify-icon></a></li>
                 <li class="footer__social"><a href=""><iconify-icon icon="skill-icons:linkedin"></iconify-icon></a></li>
                 <li class="footer__social"><a href=""><iconify-icon icon="skill-icons:instagram"></iconify-icon></a>
                 </li>
