--- a/index.html
+++ b/index.html
@@ -6,38 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de Kevscl</title>
     <link rel="shortcut icon" href="assets/images/icon.jpeg" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/skills.css">
-    <link rel="stylesheet" href="css/contac.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/animation.css">
+    <!--Font-->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+    <!-- CDN -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.2.1/hamburgers.min.css"
+    integrity="sha512-+mlclc5Q/eHs49oIOCxnnENudJWuNqX5AogCiqRBgKnpoplPzETg2fkgBFVC6WYUVxYYljuxPNG8RE7yBy1K+g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="dist/hamburgers.css" rel="stylesheet">
+    <!-- Estilos -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/hero.css" />
+    <link rel="stylesheet" href="./assets/css/skills.css" />
+    <link rel="stylesheet" href="./assets/css/about.css" />
+    <link rel="stylesheet" href="./assets/css/contac.css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" />
+    <link rel="stylesheet" href="./assets/css/animation.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!--header-->
-    <header class="header">
+    <header class="header blur">
         <a href="#" class="header__link">
             <img class="header__img" src="assets/images/icon.jpeg" alt="Logo">
             <h2 class="header__texto">Kev<span class="title__span">scl</h2>
         </a>
-        <nav class="menu">
-            <ul class="menu__list">
-                <li class="menu__link"><a href="#hero">Inicio</a></li>
-                <li class="menu__link"><a href="#about">Sobre mí</a></li>
-                <li class="menu__link"><a href="#skills">Skills</a></li>
-                <li class="menu__link"><a href="">Portafolio</a></li>
-                <li class="menu__link"><a href="">Blog</a></li>
-                <li class="menu__link"><a href="#contac">Contacto</a></li>
+        <nav class="menu nav">
+            <ul class="menu__list panel">
+                <li class="menu__item"><a class="menu__link" href="#hero">Inicio</a></li>
+                <li class="menu__item"><a class="menu__link" href="#about">Sobre mí</a></li>
+                <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
+                <li class="menu__item"><a class="menu__link" href="">Portafolio</a></li>
+                <li class="menu__item"><a class="menu__link" href="">Blog</a></li>
+                <li class="menu__item"><a class="menu__link" href="#contac">Contacto</a></li>
             </ul>
         </nav>
+        <button class="hamburger hamburger--spring" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
     </header>
 
     <!--main-->
@@ -175,6 +186,8 @@
             </ul>
         </div>
     </footer>
+
+    <script src="./modules.js" type="module"></script>
 </body>
 
 </html>
