--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="footer__container footer__container--logo">
             <a href="" class="footer__link">
                 <!-- <img class="footer__img" src="assets/images/icon.jpeg" alt="Logo"> -->
-                <h2 class="footer__texto">Kev<span class="title__span">vscl</span></h2>
+                <h2 class="footer__texto">Kev<span class="title__span">scl</span></h2>
             </a>
         </div>
         <div class="footer__container footer__container--links">
