add barberia alura

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
         <nav class="menu nav">
             <ul class="menu__list panel">
-                <li class="menu__item"><a class="menu__link" href="#hero">Inicio</a></li>
+                <li class="menu__item"><a class="menu__link active" href="#hero">Inicio</a></li>
                 <li class="menu__item"><a class="menu__link" href="#about">Sobre mí</a></li>
                 <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
                 <li class="menu__item"><a class="menu__link" href="#portafolio">Portafolio</a></li>
