--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <ul class="menu__list panel">
                 <li class="menu__item"><a class="menu__link active" href="#hero">Inicio</a></li>
                 <li class="menu__item"><a class="menu__link" href="#about">Sobre mí</a></li>
+                <li class="menu__item"><a class="menu__link" href="#academic">Formación</a></li>
                 <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
                 <li class="menu__item"><a class="menu__link" href="#portafolio">Portafolio</a></li>
                 <li class="menu__item"><a class="menu__link" href="">Blog</a></li>
@@ -67,16 +68,23 @@
             <div class="about__container">
                 <h2 class="about__title">Sobre mí</h2>
                 <div class="about__text">
-                    <h2>I love what I do</h2>
+                    <h2>Ing. en Computación.</h2>
                 </div>
-                <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum veniam
-                    ea
-                    consequatur nisi adipisci, est aliquid amet eum dolorem, natus esse incidunt fuga similique impedit
-                    ut porro ad iusto minus!</p>
+                <p class="about__description">Mi nombre es Kevin Jesús y soy estudiante de Ingeniería en Computación.
+                    Durante mi formación, me he especializado en el desarrollo de software full stack, lo que me ha
+                    proporcionado una sólida base de conocimientos y habilidades técnicas.</p>
+                <p class="about__description">
+                    A lo largo de mi carrera universitaria, he tenido la oportunidad de desarrollar un sistema de punto
+                    de venta para PYMES. Este proyecto me permitió aplicar mis conocimientos en backend, enfocándome en
+                    la seguridad del sistema y en el uso de bases de datos con triggers y vistas, optimizando así el
+                    código y mejorando su eficiencia.
+                </p>
+
+
                 <div class="about__social">
-                    <a href="" class="about__icon"><i class='bx bxl-github'></i></a>
-                    <a href="" class="about__icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="about__icon"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://github.com/KevinGil12C" class="about__icon"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.linkedin.com/in/kevin-jesus-coyote-gil-030287288/" class="about__icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/kevingil12c/" class="about__icon"><i class='bx bxl-instagram'></i></a>
                     <a href="" class="about__icon"><i class='bx bxl-facebook-square'></i></a>
                 </div>
             </div>
@@ -85,6 +93,14 @@
             </div>
         </section>
 
+        <!--academic-->
+        <section class="academic" id="academic">
+            <h2 class="academic__title">Formación académica</h2>
+            <div class="academic__courses">
+
+            </div>
+
+        </section>
         <!--skills-->
         <section class="skills" id="skills">
             <h2 class="skills__title">Skills</h2>
@@ -103,7 +119,7 @@
         <section class="portafolio" id="portafolio">
             <h2 class="portafolio__title">Portafolio</h2>
             <div class="portafolio__container">
-                
+
             </div>
         </section>
         <!--Blog-->
