--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="./assets/css/hero.css" />
     <link rel="stylesheet" href="./assets/css/skills.css" />
     <link rel="stylesheet" href="./assets/css/about.css" />
-    <link rel="stylesheet" href="./assets/css/academic.css" />
     <link rel="stylesheet" href="./assets/css/contac.css" />
     <link rel="stylesheet" href="./assets/css/footer.css" />
     <link rel="stylesheet" href="./assets/css/animation.css" />
@@ -39,7 +38,6 @@
             <ul class="menu__list panel">
                 <li class="menu__item"><a class="menu__link active" href="#hero">Inicio</a></li>
                 <li class="menu__item"><a class="menu__link" href="#about">Sobre mí</a></li>
-                <li class="menu__item"><a class="menu__link" href="#academic">Formación</a></li>
                 <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
                 <li class="menu__item"><a class="menu__link" href="#portafolio">Portafolio</a></li>
                 <li class="menu__item"><a class="menu__link" href="">Blog</a></li>
@@ -84,8 +82,10 @@
 
                 <div class="about__social">
                     <a href="https://github.com/KevinGil12C" class="about__icon"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.linkedin.com/in/kevin-jesus-coyote-gil-030287288/" class="about__icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/kevingil12c/" class="about__icon"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.linkedin.com/in/kevin-jesus-coyote-gil-030287288/" class="about__icon"><i
+                            class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.instagram.com/kevingil12c/" class="about__icon"><i
+                            class='bx bxl-instagram'></i></a>
                     <a href="" class="about__icon"><i class='bx bxl-facebook-square'></i></a>
                 </div>
             </div>
@@ -94,17 +94,34 @@
             </div>
         </section>
 
-        <!--academic-->
-        <section class="academic" id="academic">
-            <h2 class="academic__title">Formación académica</h2>
-            <div class="academic__courses">
-
-            </div>
-
-        </section>
         <!--skills-->
         <section class="skills" id="skills">
             <h2 class="skills__title">Skills</h2>
+            <div class="terminal">
+                <div class="terminal-header">
+                    <div class="buttons">
+                        <span class="button red"></span>
+                        <span class="button yellow"></span>
+                        <span class="button green"></span>
+                    </div>
+                    <span class="title">Terminal - bash</span>
+                </div>
+                <div class="terminal-content">
+                    <div class="skills__academic">
+                        <div class="skills__academic__img">
+                            <img src="./assets/images/hero.jpeg" alt="">
+                        </div>
+                        <div class="skills__academic__courses">
+                            <h2 class="skills__academic__title">Formación académica</h2>
+                            <h2 class="skills__academic__item">Ingeniería en Computación: En curso - UAEMéx</h2>
+                            <h2 class="skills__academic__item">Formación Front End G6: En curso - Alura</h2>
+                            <h2 class="skills__academic__item">Análisis de datos: 2024 - Google</h2>
+                            <h2 class="skills__academic__item">Operación Aleph: SC-900: 2024 - Red por la Ciberseguridad
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="skills__container">
                 <!--Renderizar card-->
@@ -122,6 +139,7 @@
             <div class="portafolio__container">
 
             </div>
+            <a href="portafolio.html" type="button" rel="nofollow noreferrer noopener" class="card__btn">Ver mas</a>
         </section>
         <!--Blog-->
 
