--- a/portafolio.html
+++ b/portafolio.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/hero.css" />
-    <link rel="stylesheet" href="./assets/css/skills.css" />
+
+    <link rel="stylesheet" href="./assets/css/portafolio.css">
     <link rel="stylesheet" href="./assets/css/about.css" />
-    <link rel="stylesheet" href="./assets/css/academic.css" />
     <link rel="stylesheet" href="./assets/css/contac.css" />
     <link rel="stylesheet" href="./assets/css/footer.css" />
     <link rel="stylesheet" href="./assets/css/animation.css" />
-    <link rel="stylesheet" href="./assets/css/portafolio.css">
+    
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 
@@ -39,8 +39,8 @@
             <ul class="menu__list panel">
                 <li class="menu__item"><a class="menu__link active" href="./index.html">Inicio</a></li>
                 <li class="menu__item"><a class="menu__link" href="index.html#about">Sobre mí</a></li>
-                <li class="menu__item"><a class="menu__link" href="">Blog</a></li>
-                <li class="menu__item"><a class="menu__link" href="https://github.com/KevinGil12C">Mi GitHub</a></li>
+                <li class="menu__item"><a class="menu__link" href="https://kevingil12c.github.io/blog_seguridad_informacion/" target="_blank">Blog</a></li>
+                <li class="menu__item"><a class="menu__link" href="https://github.com/KevinGil12C" target="_blank">Mi GitHub</a></li>
             </ul>
         </nav>
         <button class="hamburger hamburger--spring" type="button">
