--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                     placeholder="Tu mensaje"></textarea>
                 <input class="form__btn" type="submit" value="Submit">
             </form>
+            <a href="https://web.whatsapp.com/send?phone=+5217221595250" target="_blank"><iconify-icon class="contact__icon" icon="logos:whatsapp-icon"></iconify-icon></a>
         </section>
     </main>
 
