--- a/portafolio.html
+++ b/portafolio.html
@@ -59,8 +59,7 @@
                 <div class="btn__data">
                     <button class="data__caja active__filter" data-filter="all">All</button>
                     <button class="data__caja" data-filter="html"><iconify-icon class="data__icon" icon="skill-icons:html"></iconify-icon></button>
-                    <button class="data__caja" data-filter="css"><iconify-icon class="data__icon" icon="skill-icons:css"></iconify-icon></button>
-                    <button class="data__caja" data-filter="js"><iconify-icon class="data__icon" icon="vscode-icons:file-type-js-official"></iconify-icon></button>
+                    <button class="data__caja" data-filter="html"><iconify-icon class="data__icon" icon="skill-icons:react-light"></iconify-icon></button>
                     <button class="data__caja" data-filter="java"><iconify-icon class="data__icon" icon="devicon:java"></iconify-icon></button>
                     <button class="data__caja" data-filter="python"><iconify-icon class="data__icon" icon="logos:python"></iconify-icon></button>
                     <button class="data__caja" data-filter="php"><iconify-icon class="data__icon" icon="skill-icons:php-dark"></iconify-icon></button>
@@ -92,6 +91,7 @@
             </div>
 
         </div>
+        <a href="https://web.whatsapp.com/send?phone=+5217221595250" target="_blank"><iconify-icon class="contact__icon" icon="logos:whatsapp-icon"></iconify-icon></a>
 
         <div class="footer__container footer__container--social">
             <ul class="footer__social--list">
