--- a/portafolio.html
+++ b/portafolio.html
@@ -59,17 +59,18 @@
                 <div class="btn__data">
                     <button class="data__caja active__filter" data-filter="all">All</button>
                     <button class="data__caja" data-filter="html"><iconify-icon class="data__icon" icon="skill-icons:html"></iconify-icon></button>
-                    <button class="data__caja" data-filter="html"><iconify-icon class="data__icon" icon="skill-icons:react-light"></iconify-icon></button>
+                    <button class="data__caja" data-filter="react"><iconify-icon class="data__icon" icon="skill-icons:react-light"></iconify-icon></button>
                     <button class="data__caja" data-filter="java"><iconify-icon class="data__icon" icon="devicon:java"></iconify-icon></button>
                     <button class="data__caja" data-filter="python"><iconify-icon class="data__icon" icon="logos:python"></iconify-icon></button>
                     <button class="data__caja" data-filter="php"><iconify-icon class="data__icon" icon="skill-icons:php-dark"></iconify-icon></button>
-                    <button class="data__caja" data-filter="c"><iconify-icon class="data__icon" icon="logos:c-plusplus"></iconify-icon></button>
+                    <button class="data__caja" data-filter="cplus"><iconify-icon class="data__icon" icon="logos:c-plusplus"></iconify-icon></button>
 
                 </div>
             </div>
             <div class="portafolio__container">
 
             </div>
+            <img src="./assets/images/notfound.jpeg" alt="No se encontraron resultados" class="error-image" style="display:none;">
         </section>
 
     </main>
