--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <div class="hero__container">
                 <div>
                     <h1 class="hero__title">Kev<span class="title__span">scl</span></h1>
-                    <h2 class="hero__description">Front-end Developer</h2>
+                    <h2 class="hero__description">Desarrollador de software</h2>
                 </div>
                 <div class="skills">
                     <div class="skills__container"></div>
                 </div>
             </div>
-            <img class="hero__img" src="assets/images/hero.jpeg" alt="Foto de perfil">
+            <img class="hero__img" src="assets/images/foto.jpg" alt="Foto de perfil">
         </section>
 
         <!--about-->
