--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="about__media">
-                <img src="assets/images/icon.jpeg" alt="" class="about__img">
+                <img src="assets/images/avatar.jpeg" alt="" class="about__img">
             </div>
         </section>
 
