--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                     <h2 class="hero__description">Desarrollador de software</h2>
                 </div>
                 <div class="skills">
-                    <div class="skills__container"></div>
+                    <div class="skills__container">
+                        <!--actualizar card-->
+                    </div>
                 </div>
             </div>
             <img class="hero__img" src="assets/images/foto.jpg" alt="Foto de perfil">
