--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/carrucel.css" />
     <link rel="stylesheet" href="./assets/css/hero.css" />
     <link rel="stylesheet" href="./assets/css/skills.css" />
     <link rel="stylesheet" href="./assets/css/portafolio.css">
@@ -56,17 +57,20 @@
         <!--hero-->
         <section class="hero" id="hero">
             <div class="hero__container">
-                <div>
-                    <h1 class="hero__title">Kev<span class="title__span">scl</span></h1>
-                    <h2 class="hero__description">Desarrollador de software</h2>
+                <div class="hero__header">
+                    <div class="hero__text">
+                        <h1 class="hero__title">Kev<span class="title__span">scl</span></h1>
+                        <h2 class="hero__description">Desarrollador de software</h2>
+                    </div>
+                    <img class="hero__img" src="assets/images/foto.jpg" alt="Foto de perfil">
                 </div>
-                <div class="skills">
-                    <div class="skills__container">
+                <div class="slider">
+                    <div class="slide__track">
                         <!--actualizar card-->
                     </div>
                 </div>
             </div>
-            <img class="hero__img" src="assets/images/foto.jpg" alt="Foto de perfil">
+            
         </section>
 
         <!--about-->
